<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductScreenActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_screen_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_add_product_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="@dimen/toolbar_title_paddingEnd"
            android:text="@string/title_buy_product"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_product_screen_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_product_screen_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_product_header_image_height"
                android:background="@drawable/app_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_product_screen_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/primary_padding"
                    android:background="@color/colorImageViewBackground"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY" />

            </FrameLayout>

            <com.torrex.shopit.utils.TextViewBoldDesign
                android:id="@+id/tv_product_screen_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/primary_text_size"
                android:hint="@string/et_hint_product_title"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_product_screen_image">

            </com.torrex.shopit.utils.TextViewBoldDesign>


            <LinearLayout
                android:id="@+id/ll_product_estimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/primary_layout_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_screen_title"
                >

                <TextView
                    android:id="@+id/tv_product_screen_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/product_screen_price_title"
                    />
                <com.torrex.shopit.utils.TextViewBoldDesign
                    android:id="@+id/tv_product_screen_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/et_hint_product_price"
                    android:textColorHint="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_product_title_edit">

                </com.torrex.shopit.utils.TextViewBoldDesign>

                <TextView
                    android:id="@+id/tv_product_screen_quantity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/product_screen_quantity_title"/>


                <com.torrex.shopit.utils.TextViewBoldDesign
                    android:id="@+id/tv_product_screen_quantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/et_hint_product_quantity"
                    android:textColorHint="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_product_price_edit">

                </com.torrex.shopit.utils.TextViewBoldDesign>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_product_screen_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/product_screen_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_estimate"/>

            <com.torrex.shopit.utils.TextViewBoldDesign
                android:id="@+id/tv_product_screen_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_product_description"
                android:padding="@dimen/text_padding"
                android:background="@drawable/primary_outline_background"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_screen_description_title">

            </com.torrex.shopit.utils.TextViewBoldDesign>

            <LinearLayout
                android:id="@+id/ll_product_screen_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_screen_description"
                >

                <com.torrex.shopit.utils.CustomButton
                    android:id="@+id/btn_product_screen_add_to_cart"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/product_screen_button_size"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:focusable="?attr/selectableItemBackground"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_product_screen_add_to_cart"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_product_screen_text_size"
                   />

                <com.torrex.shopit.utils.CustomButton
                    android:id="@+id/btn_product_screen_buy_now"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/product_screen_button_size"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:focusable="?attr/selectableItemBackground"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:text="@string/btn_product_screen_buy_now"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_product_screen_text_size"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>