<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.account.AccountFragment">


    <GridLayout
        android:id="@+id/gv_account"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_layout_margin"
        android:background="@drawable/primary_outline_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_my_selling_products"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_bar_size_my_account"
            android:background="@color/app_background"
            android:focusable="?attr/selectableItemBackground"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="@string/title_my_product"
            android:gravity="center"
            android:textSize="@dimen/default_text_size_my_account"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_my_orders_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_bar_size_my_account"
            android:background="@color/white"
            android:focusable="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:text="@string/title_my_order"
            android:textSize="@dimen/default_text_size_my_account"
            android:textColor="@color/light_blue"
            />

        <TextView
            android:id="@+id/tv_my_account_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_bar_size_my_account"
            android:background="@color/app_background"
            android:focusable="?attr/selectableItemBackground"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:text="@string/title_account"
            android:gravity="center"
            android:textSize="@dimen/default_text_size_my_account"
            android:textColor="@color/white"
        />

    </GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>